--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,54 @@
+# ============================================================================
+# Universal Docker Compose Configuration (Build from Source)
+# ============================================================================
+# Compatible with ALL operating systems and architectures:
+#   ✓ Windows (Intel/AMD)
+#   ✓ macOS Intel (x86_64)
+#   ✓ macOS Apple Silicon (M1/M2/M3 - ARM64)
+#   ✓ Linux (Intel/AMD)
+#   ✓ Linux (ARM64 - Raspberry Pi, AWS Graviton)
+#
+# Usage: docker-compose up -d --build
+# ============================================================================
+
+version: '3.8'
+
 services:
+  # ========================================
   # Backend Server
+  # ========================================
   server:
     build:
       context: ./server
       dockerfile: Dockerfile
+      # Build for current platform (auto-detected)
+      platforms:
+        - linux/amd64
+        - linux/arm64
+
     container_name: onedrive-server
     restart: unless-stopped
+
     ports:
       - "5001:5001"
+
     environment:
       - NODE_ENV=production
       - PORT=5001
       - SUPABASE_URL=${SUPABASE_URL}
       - SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
       - JWT_SECRET=${JWT_SECRET}
-      - JWT_EXPIRE=${JWT_EXPIRE}
-      - MAX_FILE_SIZE=${MAX_FILE_SIZE}
+      - JWT_EXPIRE=${JWT_EXPIRE:-7d}
+      - MAX_FILE_SIZE=${MAX_FILE_SIZE:-52428800}
       - UPLOAD_DIR=/app/uploads
-      - FRONTEND_URL=${FRONTEND_URL}
+      - FRONTEND_URL=${FRONTEND_URL:-http://localhost}
+
     volumes:
       - server-uploads:/app/uploads
+
     networks:
       - onedrive-network
+
     healthcheck:
       test: ["CMD", "node", "-e", "require('http').get('http://localhost:5001/api/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1); })"]
       interval: 30s
@@ -29,19 +56,31 @@ services:
       retries: 3
       start_period: 40s
 
+  # ========================================
   # Frontend Client
+  # ========================================
   client:
     build:
       context: ./client
       dockerfile: Dockerfile
+      # Build for current platform (auto-detected)
+      platforms:
+        - linux/amd64
+        - linux/arm64
+
     container_name: onedrive-client
     restart: unless-stopped
+
     ports:
       - "80:80"
+
     depends_on:
-      - server
+      server:
+        condition: service_healthy
+
     networks:
       - onedrive-network
+
     environment:
       - VITE_API_URL=${VITE_API_URL:-http://localhost:5001}
 
